--- a/apps/beach/Cargo.toml
+++ b/apps/beach/Cargo.toml
@@ -7,6 +7,10 @@ edition = "2024"
 name = "beach_client_core"
 path = "src/lib.rs"
 
+[features]
+default = []
+redis-queue = ["redis"]
+
 [[bin]]
 name = "beach"
 path = "src/main.rs"
@@ -31,6 +35,7 @@ reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
 rand = "0.8"
 uuid = { version = "1", features = ["v4"] }
 serde_json = "1"
+redis = { version = "0.25", features = ["tokio-comp", "connection-manager"], optional = true }
 async-trait = "0.1"
 futures = "0.3"
 dotenvy = "0.15"
@@ -57,6 +62,7 @@ beach-lifeguard-client = { path = "../beach-lifeguard/client" }
 beach-lifeguard-core = { path = "../beach-lifeguard/core" }
 beach-buggy = { path = "../../crates/beach-buggy" }
 transport-bus = { path = "../../crates/transport-bus" }
+transport-unified-adapter = { path = "../../crates/transport-unified-adapter" }
 time = { version = "0.3", features = ["serde"] }
 hex = "0.4"
 directories = "5"
