--- a/crates/beach-buggy/Cargo.toml
+++ b/crates/beach-buggy/Cargo.toml
@@ -20,6 +20,8 @@ url = "2"
 webrtc = { version = "0.14", default-features = true }
 base64 = "0.21"
 uuid = { version = "1", features = ["v4"] }
+transport-bus = { path = "../transport-bus" }
+bytes = "1"
 
 [dev-dependencies]
 axum = { version = "0.7", features = ["macros"] }
