--- a/crates/manager-sdk/Cargo.toml
+++ b/crates/manager-sdk/Cargo.toml
@@ -13,3 +13,4 @@ reqwest = { version = "0.11", features = ["json", "gzip", "brotli", "rustls-tls"
 thiserror = "1.0"
 uuid = { version = "1", features = ["serde", "v4"] }
 tokio = { version = "1.35", features = ["rt", "macros"] }
+async-trait = "0.1"
